--- a/charts/ci-pipelines/values.yaml
+++ b/charts/ci-pipelines/values.yaml
@@ -48,7 +48,7 @@ pipelines:
         npm install
       fi
       if ! npm ls jest-environment-jsdom >/dev/null 2>&1; then
-        npm install --no-save jest-environment-jsdom@^29
+        npm install --save-dev jest-environment-jsdom@^29
       fi
       if [ -f jest.config.js ]; then
         npm pkg set scripts.test="jest --config=jest.config.js --watch=false"
