--- a/charts/bitiq-umbrella/tests/image_updater_app_test.yaml
+++ b/charts/bitiq-umbrella/tests/image_updater_app_test.yaml
@@ -4,7 +4,7 @@ templates:
 release:
   name: umbrella
   namespace: openshift-gitops
-assertions:
+tests:
   - it: app name and label include env
     set:
       env: sno
