--- a/charts/bitiq-umbrella/tests/namespace_test.yaml
+++ b/charts/bitiq-umbrella/tests/namespace_test.yaml
@@ -4,7 +4,7 @@ templates:
 release:
   name: umbrella
   namespace: openshift-gitops
-assertions:
+tests:
   - it: creates namespace with env label
     set:
       env: prod
