--- a/charts/bitiq-umbrella/tests/sample_app_test.yaml
+++ b/charts/bitiq-umbrella/tests/sample_app_test.yaml
@@ -4,7 +4,7 @@ templates:
 release:
   name: umbrella
   namespace: openshift-gitops
-assertions:
+tests:
   - it: sets multi-image annotations and env label
     set:
       env: local
