--- a/charts/bitiq-sample-app/tests/deployment_test.yaml
+++ b/charts/bitiq-sample-app/tests/deployment_test.yaml
@@ -2,11 +2,11 @@ suite: Deployment container image
 templates:
   - templates/deployment.yaml
 values:
-  - values-common.yaml
+  - ../values-common.yaml
 release:
   name: sample
   namespace: bitiq-local
-assertions:
+tests:
   - it: uses repository + tag from values
     set:
       backend:
