--- a/charts/bitiq-sample-app/tests/route_test.yaml
+++ b/charts/bitiq-sample-app/tests/route_test.yaml
@@ -4,7 +4,7 @@ templates:
 release:
   name: sample
   namespace: bitiq-local
-assertions:
+tests:
   - it: builds host from hostPrefix and baseDomain
     set:
       baseDomain: apps.example.test
