--- a/charts/ci-pipelines/templates/namespace-target.yaml
+++ b/charts/ci-pipelines/templates/namespace-target.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.createImageNamespaces }}
 {{- $seen := dict -}}
 {{- range $pipeline := .Values.pipelines }}
 {{- $ns := $pipeline.imageNamespace -}}
@@ -10,5 +11,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: {{ $ns }}
+{{- end }}
 {{- end }}
 {{- end }}
