ci(validate): fix tool version flags and install helm-unittest in GitOps Validate

--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -42,7 +42,7 @@ jobs:
         run: |
           helm version
           helm plugin list || true
-          kubeconform --version
+          kubeconform -v
           conftest --version
           yamllint --version
 
