--- a/.github/workflows/gitops-validate.yml
+++ b/.github/workflows/gitops-validate.yml
@@ -25,5 +25,8 @@ jobs:
           curl -sSL https://github.com/open-policy-agent/conftest/releases/download/v0.52.0/conftest_0.52.0_Linux_x86_64.tar.gz \
             | sudo tar -xz -C /usr/local/bin conftest
 
+      - name: Install helm-unittest plugin
+        run: helm plugin install https://github.com/helm-unittest/helm-unittest
+
       - name: Validate (make validate)
         run: make validate
