feat(charts): prod parity on OCP 4.19 (#22)
* docs(agents): add ENV=sno parity execution plan for Codex agents

* feat(charts): align sno parity configuration and docs

* feat(sno): add runbook and preflight helper

* feat(prod): add runbook and preflight checks

* chore(operators): pin gitops/pipelines channels for ocp 4.19

* feat(secrets): add eso vault examples and prod guide

* docs(prod): add argocd rbac and sso guidance

* docs(prod): add tekton hardening guidance

* docs(prod): finalize plan status and section order

* ci(validate): replace helm unittest --version with plugin list to avoid failure

* ci(validate): fix tool version flags and install helm-unittest in GitOps Validate

--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -41,8 +41,8 @@ jobs:
       - name: Show tool versions
         run: |
           helm version
-          helm unittest --version
-          kubeconform --version
+          helm plugin list || true
+          kubeconform -v
           conftest --version
           yamllint --version
 
