ci(yamllint): align config with repo conventions, disable document-start and warn on line-length/truthy; ignore Helm templates

--- a/.yamllint.yaml
+++ b/.yamllint.yaml
@@ -5,4 +5,15 @@ rules:
   # omit the leading document marker. Treat missing '---' as acceptable.
   document-start: disable
 
-  # Keep defaults for other rules; adjust incrementally if needed.
+  # Keep lines readable in CI logs, but do not fail on longer lines.
+  line-length:
+    max: 140
+    level: warning
+
+  # YAML "truthy" values like "yes/no" are sometimes used in vendor files; warn only.
+  truthy:
+    level: warning
+
+# Avoid linting raw Helm templates which are not valid YAML pre-render
+ignore: |
+  charts/**/templates/**
