ci(yamllint): align config and prevent validate failures (#23)
* docs(agents): add ENV=sno parity execution plan for Codex agents

* feat(charts): align sno parity configuration and docs

* feat(sno): add runbook and preflight helper

* feat(prod): add runbook and preflight checks

* chore(operators): pin gitops/pipelines channels for ocp 4.19

* feat(secrets): add eso vault examples and prod guide

* docs(prod): add argocd rbac and sso guidance

* docs(prod): add tekton hardening guidance

* docs(prod): finalize plan status and section order

* ci(validate): replace helm unittest --version with plugin list to avoid failure

* ci(validate): fix tool version flags and install helm-unittest in GitOps Validate

* ci(yamllint): disable document-start rule for Helm chart files

* ci(yamllint): align config with repo conventions, disable document-start and warn on line-length/truthy; ignore Helm templates

--- a/.yamllint.yaml
+++ b/.yamllint.yaml
@@ -1,8 +1,16 @@
 extends: default
+
 rules:
+  # Many Helm-maintained YAML files (Chart.yaml, values.yaml, tests) intentionally
+  # omit the leading document marker. Treat missing '---' as acceptable.
+  document-start: disable
+
+  # Keep lines readable in CI logs, but do not fail on longer lines.
   line-length:
     max: 140
     level: warning
+
+  # YAML "truthy" values like "yes/no" are sometimes used in vendor files; warn only.
   truthy:
     level: warning
 
