chore(ci): wrap long echo to satisfy yamllint

--- a/.github/workflows/cluster-smoke.yml
+++ b/.github/workflows/cluster-smoke.yml
@@ -55,7 +55,8 @@ jobs:
             oc login -u "$OC_USER" -p "$OC_PASSWORD" "$OC_URL" --insecure-skip-tls-verify=true
             exit 0
           fi
-          echo "No cluster credentials provided. Set KUBECONFIG_B64 or OC_URL + OC_TOKEN/OC_USER+OC_PASSWORD in repo/organization secrets." >&2
+          echo "No cluster credentials provided." >&2
+          echo "Set KUBECONFIG_B64 or OC_URL + OC_TOKEN/OC_USER+OC_PASSWORD in repo/organization secrets." >&2
           exit 1
 
       - name: Run smoke checks
