feat(charts): plumb Tekton fsGroup via ApplicationSet and auto-detect in bootstrap to fix git-clone PVC permissions

--- a/charts/argocd-apps/templates/applicationset-umbrella.yaml
+++ b/charts/argocd-apps/templates/applicationset-umbrella.yaml
@@ -46,6 +46,8 @@ spec:
               value: '{{ "{{ .platforms }}" }}'
             - name: imageUpdater.enableFrontend
               value: '{{ "{{ .enableFrontendImageUpdate | default true }}" }}'
+            - name: ciPipelines.fsGroup
+              value: '{{ "{{ .tektonFsGroup }}" }}'
       destination:
         server: '{{ "{{ .cluster }}" }}'
         namespace: '{{ "{{ .appNamespace }}" }}'
