--- a/charts/argocd-apps/values.yaml
+++ b/charts/argocd-apps/values.yaml
@@ -17,13 +17,19 @@ envs:
     baseDomain: apps-crc.testing                    # OpenShift Local default
     platforms: linux/amd64
     enableFrontendImageUpdate: true
+    # Optional: fsGroup for Tekton TaskRun pods. If set, it will be passed to
+    # the umbrella chart as ciPipelines.fsGroup so workspaces (PVCs) are group‑writable.
+    # Leave empty to use cluster defaults/SCC.
+    tektonFsGroup: ""
   - name: sno
     clusterServer: https://kubernetes.default.svc
     appNamespace: bitiq-sno
     baseDomain: apps.sno.example
     platforms: linux/amd64
+    tektonFsGroup: ""
   - name: prod
     clusterServer: https://kubernetes.default.svc
     appNamespace: bitiq-prod
     baseDomain: apps.prod.example
     platforms: linux/amd64
+    tektonFsGroup: ""
