fix(argocd-apps): ensure ApplicationSet reconciles by instance
- Add argocdInstanceName default (openshift-gitops)
- Label ApplicationSet with argocd.argoproj.io/instance so the controller picks it up
- Keep envFilter and list generator behavior unchanged

This unblocks generation of bitiq-umbrella-<env> on CRC/Ubuntu local setups.

--- a/charts/argocd-apps/templates/applicationset-umbrella.yaml
+++ b/charts/argocd-apps/templates/applicationset-umbrella.yaml
@@ -3,6 +3,9 @@ kind: ApplicationSet
 metadata:
   name: bitiq-umbrella-by-env
   namespace: {{ .Values.argocdNamespace }}
+  labels:
+    # Ensure the ApplicationSet controller for this Argo CD instance reconciles this resource
+    argocd.argoproj.io/instance: {{ .Values.argocdInstanceName | quote }}
 spec:
   goTemplate: true
   generators:
