--- a/charts/argocd-apps/values.yaml
+++ b/charts/argocd-apps/values.yaml
@@ -1,6 +1,7 @@
 repoUrl: https://github.com/bitiq-io/gitops.git
 targetRevision: main
 argocdNamespace: openshift-gitops
+argocdInstanceName: openshift-gitops
 envFilter: ""   # if set to local/sno/prod, only that env is generated
 
 # Optional global override applied to generated env baseDomain values
