fix(bootstrap): detect Tekton fsGroup after operator install and pass to ApplicationSet
- Avoid timing race by waiting for openshift-pipelines namespace before detection
- Ensure ci-pipelines TriggerTemplates render fsGroup for PipelineRuns

fix(argocd-apps): set sane local default fsGroup (1000660000)

- Provide reliable default for ENV=local to prevent git-clone permission issues
- Other envs continue to be set via bootstrap auto-detection or explicit override

--- a/charts/argocd-apps/values.yaml
+++ b/charts/argocd-apps/values.yaml
@@ -21,7 +21,7 @@ envs:
     # Optional: fsGroup for Tekton TaskRun pods. If set, it will be passed to
     # the umbrella chart as ciPipelines.fsGroup so workspaces (PVCs) are group‑writable.
     # Leave empty to use cluster defaults/SCC.
-    tektonFsGroup: ""
+    tektonFsGroup: "1000660000"
   - name: sno
     clusterServer: https://kubernetes.default.svc
     appNamespace: bitiq-sno
