fix(argocd-apps): include tektonFsGroup in ApplicationSet generator so ciPipelines.fsGroup propagates to Tekton

--- a/charts/argocd-apps/templates/applicationset-umbrella.yaml
+++ b/charts/argocd-apps/templates/applicationset-umbrella.yaml
@@ -18,6 +18,7 @@ spec:
             baseDomain: {{ default $e.baseDomain $.Values.baseDomainOverride | quote }}
             appNamespace: {{ $e.appNamespace | quote }}
             platforms: {{ $e.platforms | quote }}
+            tektonFsGroup: {{ $e.tektonFsGroup | quote }}
 {{- end }}
 {{- end }}
   template:
