fix(ci-pipelines): correct YAML doc separation for TriggerTemplates to avoid malformed '2Gi---' boundary
Ensure each TriggerTemplate starts on a new document only for subsequent pipelines (if ). This prevents the first template's last line from gluing to the next '---' and being dropped by Argo/yaml parsers. Lint + tests pass.

--- a/charts/ci-pipelines/templates/triggers.yaml
+++ b/charts/ci-pipelines/templates/triggers.yaml
@@ -15,9 +15,11 @@ stringData:
 {{ end }}
 
 {{ range $idx, $pipeline := .Values.pipelines }}
+{{ if $idx }}
+---
+{{ end }}
 {{- $pipelineSA := $pipeline.serviceAccountName | default $defaultSA -}}
 {{- $pipelineFsGroup := coalesce $pipeline.fsGroup $root.Values.fsGroup -}}
----
 apiVersion: triggers.tekton.dev/v1beta1
 kind: TriggerTemplate
 metadata:
