feat(umbrella): add per-image pause toggles + conditional updater annotations
- Add imageUpdater.pause.backend/frontend defaults
- Render image-list, strategies, platforms, helm mappings, allow-tags conditionally
- Gate write-back annotations when all services paused

--- a/charts/argocd-apps/templates/applicationset-umbrella.yaml
+++ b/charts/argocd-apps/templates/applicationset-umbrella.yaml
@@ -50,6 +50,10 @@ spec:
               value: '{{ "{{ .platforms }}" }}'
             - name: imageUpdater.enableFrontend
               value: '{{ "{{ .enableFrontendImageUpdate | default true }}" }}'
+            - name: imageUpdater.pause.backend
+              value: '{{ "{{ .imageUpdaterPause.backend | default false }}" }}'
+            - name: imageUpdater.pause.frontend
+              value: '{{ "{{ .imageUpdaterPause.frontend | default false }}" }}'
             - name: ciPipelines.fsGroup
               value: '{{ "{{ .tektonFsGroup }}" }}'
       destination:
