--- a/charts/bitiq-umbrella/values.yaml
+++ b/charts/bitiq-umbrella/values.yaml
@@ -14,6 +14,9 @@ imageUpdater:
   platforms: linux/amd64
   pullSecret: ""
   enableFrontend: true
+  pause:
+    backend: false
+    frontend: false
 
 sampleAppImages:
   backend: quay.io/paulcapestany/toy-service
