fix(argocd-apps): expose imageUpdaterPause in generator elements so pause flags reach umbrella

--- a/charts/argocd-apps/templates/applicationset-umbrella.yaml
+++ b/charts/argocd-apps/templates/applicationset-umbrella.yaml
@@ -18,6 +18,9 @@ spec:
             baseDomain: {{ default $e.baseDomain $.Values.baseDomainOverride | quote }}
             appNamespace: {{ $e.appNamespace | quote }}
             platforms: {{ $e.platforms | quote }}
+            imageUpdaterPause:
+              backend: {{ default false $e.imageUpdaterPause.backend }}
+              frontend: {{ default false $e.imageUpdaterPause.frontend }}
             tektonFsGroup: {{ $e.tektonFsGroup | quote }}
 {{- end }}
 {{- end }}
