--- a/charts/bitiq-umbrella/values-common.yaml
+++ b/charts/bitiq-umbrella/values-common.yaml
@@ -15,19 +15,18 @@ imageUpdater:
   platforms: linux/amd64
   # Optional: registry auth secret for tag discovery (format: "<ns>/<secret>" or just name in openshift-gitops)
   pullSecret: ""
-  # Control whether Image Updater manages frontend image (toy-web) annotations
-  # Defaults to true; can be disabled per-env via ApplicationSet params
-  enableFrontend: true
-  # Pause flags disable Image Updater write-back for a given service while still allowing manual tag edits
-  pause:
-    backend: false
-    frontend: false
+  toyService:
+    enabled: true
+    pause: false
+  toyWeb:
+    enabled: true
+    pause: false
 
 # Sample app images (Image Updater watches these)
 # Use Quay for easier public tag discovery in local e2e
 sampleAppImages:
-  backend: quay.io/paulcapestany/toy-service
-  frontend: quay.io/paulcapestany/toy-web
+  toyService: quay.io/paulcapestany/toy-service
+  toyWeb: quay.io/paulcapestany/toy-web
 
 ciPipelines:
   serviceAccountName: pipeline
