--- a/charts/toy-service/templates/deployment.yaml
+++ b/charts/toy-service/templates/deployment.yaml
@@ -1,28 +1,28 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: bitiq-sample-app
+  name: toy-service
   labels:
-    app.kubernetes.io/name: bitiq-sample-app
+    app.kubernetes.io/name: toy-service
 spec:
-  replicas: {{ .Values.backend.replicaCount }}
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: bitiq-sample-app
+      app.kubernetes.io/name: toy-service
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: bitiq-sample-app
+        app.kubernetes.io/name: toy-service
     spec:
       securityContext:
         runAsNonRoot: true
       containers:
-        - name: backend
-          image: "{{ .Values.backend.image.repository }}:{{ .Values.backend.image.tag }}"
-          imagePullPolicy: {{ .Values.backend.image.pullPolicy }}
+        - name: toy-service
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
             - "--port"
-            - "{{ .Values.backend.service.port }}"
+            - "{{ .Values.service.port }}"
           securityContext:
             runAsNonRoot: true
             allowPrivilegeEscalation: false
@@ -30,28 +30,28 @@ spec:
               drop: ["ALL"]
           ports:
             - name: http
-              containerPort: {{ .Values.backend.service.port }}
+              containerPort: {{ .Values.service.port }}
           readinessProbe:
             httpGet:
-              path: {{ .Values.backend.healthPath | default "/healthz" }}
+              path: {{ .Values.healthPath | default "/healthz" }}
               port: http
             initialDelaySeconds: 5
           livenessProbe:
             httpGet:
-              path: {{ .Values.backend.healthPath | default "/healthz" }}
+              path: {{ .Values.healthPath | default "/healthz" }}
               port: http
             initialDelaySeconds: 10
           resources:
-            {{- toYaml .Values.backend.resources | nindent 12 }}
-      {{- with .Values.backend.nodeSelector }}
+            {{- toYaml .Values.resources | nindent 12 }}
+      {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.backend.tolerations }}
+      {{- with .Values.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.backend.affinity }}
+      {{- with .Values.affinity }}
       affinity:
         {{- toYaml . | nindent 8 }}
       {{- end }}
