chore(umbrella): remove toy-web enabled gating; rely on pause only
- Drop imageUpdater.toyWeb.enabled across umbrella + argocd-apps
- Simplify app-toy-web annotations condition to pause-only
- Update tests to validate paused behavior

--- a/charts/bitiq-umbrella/templates/app-toy-web.yaml
+++ b/charts/bitiq-umbrella/templates/app-toy-web.yaml
@@ -1,15 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 {{- $toyWebCfg := default (dict) .Values.imageUpdater.toyWeb }}
-{{- $toyWebEnabled := true }}
-{{- if hasKey $toyWebCfg "enabled" }}
-  {{- $toyWebEnabled = eq (lower (printf "%v" (get $toyWebCfg "enabled"))) "true" }}
-{{- end }}
 {{- $toyWebPaused := false }}
 {{- if hasKey $toyWebCfg "pause" }}
   {{- $toyWebPaused = eq (lower (printf "%v" (get $toyWebCfg "pause"))) "true" }}
 {{- end }}
-{{- $manageToyWeb := and $toyWebEnabled (not $toyWebPaused) }}
+{{- $manageToyWeb := not $toyWebPaused }}
 {{- $toyWebRepo := default "" (get .Values.sampleAppImages "toyWeb") }}
 metadata:
   name: toy-web-{{ .Values.env }}
