--- a/charts/bitiq-umbrella/Chart.yaml
+++ b/charts/bitiq-umbrella/Chart.yaml
@@ -3,4 +3,4 @@ name: bitiq-umbrella
 description: App-of-Apps to deploy platform components + a sample app for an ENV
 type: application
 version: 0.1.0
-appVersion: "toy-service-v0.3.19-commit.fcedae7_toy-web-v0.1.19-commit.a573ab4"
+appVersion: "toy-service-v0.3.23-commit.e26fd2b_toy-web-v0.1.24-commit.fe12466"
