feat(charts): toy-service secrets via ExternalSecret (T7)
- Add backend.env and backend.secret.* to charts/toy-service and wire to Deployment env.
- Provide optional ESO ExternalSecret example for toy-service-config (FAKE_SECRET) in charts/eso-vault-examples.
- Update PROD-SECRETS with Vault KV path, enablement flag, and verification steps.
- Mark T7 complete in GITOPS-IMPROVEMENT-PLAN.

Env impact: none by default (disabled). Validation: make validate and helm unittest pass locally.
Notes: Local templating shows env wiring when toggled; ESO example remains opt-in.

--- a/charts/toy-service/templates/deployment.yaml
+++ b/charts/toy-service/templates/deployment.yaml
@@ -1,3 +1,10 @@
+{{- $backend := default (dict) .Values.backend -}}
+{{- $backendEnv := default (list) $backend.env -}}
+{{- $backendSecret := default (dict) $backend.secret -}}
+{{- $backendSecretItems := default (list) $backendSecret.items -}}
+{{- $backendSecretEnabled := and $backendSecret.enabled (gt (len $backendSecretItems) 0) -}}
+{{- $renderBackendEnv := or (gt (len $backendEnv) 0) $backendSecretEnabled -}}
+{{- $backendSecretName := default "toy-service-config" $backendSecret.name -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -43,6 +50,31 @@ spec:
             initialDelaySeconds: 10
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          {{- if $renderBackendEnv }}
+          env:
+            {{- range $entry := $backendEnv }}
+            - name: {{ required "backend.env entries must define name" $entry.name }}
+              {{- if hasKey $entry "valueFrom" }}
+              valueFrom:
+{{ toYaml $entry.valueFrom | indent 16 }}
+              {{- else }}
+              value: {{ default "" $entry.value | quote }}
+              {{- end }}
+            {{- end }}
+            {{- if $backendSecretEnabled }}
+            {{- range $item := $backendSecretItems }}
+            - name: {{ required "backend.secret.items entries must define name" $item.name }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ default $backendSecretName $item.secretName | quote }}
+                  key: {{ required (printf "backend.secret.items entry %s must define key" (default "<missing>" $item.name)) $item.key | quote }}
+                  {{- $itemOptional := default $backendSecret.optional $item.optional }}
+                  {{- if $itemOptional }}
+                  optional: {{ $itemOptional }}
+                  {{- end }}
+            {{- end }}
+            {{- end }}
+          {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
