--- a/charts/toy-service/values-common.yaml
+++ b/charts/toy-service/values-common.yaml
@@ -20,3 +20,11 @@ resources:
 nodeSelector: {}
 tolerations: []
 affinity: {}
+
+backend:
+  env: []
+  secret:
+    enabled: false
+    name: toy-service-config
+    optional: false
+    items: []
