--- a/charts/eso-vault-examples/values.yaml
+++ b/charts/eso-vault-examples/values.yaml
@@ -63,6 +63,19 @@ webhookSecret:
   # Optional annotations for the generated Secret
   annotations: {}
 
+toyServiceConfig:
+  enabled: false
+  targetSecretName: toy-service-config
+  targetNamespace: bitiq-local
+  refreshInterval: 1m
+  data:
+    - secretKey: FAKE_SECRET
+      remoteRef:
+        key: gitops/data/services/toy-service/config
+        property: fake_secret
+  # Optional annotations for the generated Secret
+  annotations: {}
+
 # Common fields applied to ExternalSecret resources.
 externalSecretDefaults:
   secretStoreRef:
